--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <a href="09_Länkar/index.html">09_Länkar</a>
 
     <a href="Newgrids/index.html">New grids</a>
+
+    <a href="snacks/a.html">New grids</a>
+
 </body>
 </html>
