--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <a href="Newgrids/index.html">New grids</a>
 
-    <a href="snacks/a.html">New grids</a>
+    <a href="snacks/a.html">Snacks</a>
 
 </body>
 </html>
