--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 
     <a href="snacks/a.html">Snacks</a>
 
+    <a href="Animationer/animations.html">Animationer och transitioner</a>
+
 </body>
 </html>
